--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family:'Raleway';
+  font-family: 'Bai Jamjuree', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -9,3 +9,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&family=Cairo:wght@400;500;600;700&family=League+Spartan:wght@300;400;600&family=Open+Sans:wght@300&family=Overpass:wght@400;700&family=Poppins:wght@200;400;500;600;700&family=Raleway:wght@300;400;600;700&family=Space+Grotesk:wght@500&family=Ubuntu:wght@300;400;500;700&display=swap');
