--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Bai Jamjuree', sans-serif;
+  font-family: 'Cairo','Bai Jamjuree', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,5 +11,5 @@ code {
 }
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&family=Noto+Kufi+Arabic:wght@100;200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&family=Cairo:wght@400;500;600;700&family=League+Spartan:wght@300;400;600&family=Open+Sans:wght@300&family=Overpass:wght@400;700&family=Poppins:wght@200;400;500;600;700&family=Raleway:wght@300;400;600;700&family=Space+Grotesk:wght@500&family=Ubuntu:wght@300;400;500;700&display=swap');
